[project]
name = "llm-{{ cookiecutter.hyphenated }}"
version = "0.1"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/llm-{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/llm-{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/llm-{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/llm-{{ cookiecutter.hyphenated }}/actions"
{% endif %}
[project.entry-points.llm]
{{ cookiecutter.underscored }} = "llm_{{ cookiecutter.underscored }}"

[project.optional-dependencies]
test = ["pytest"]
